--- a/source/styles/css/filter.css
+++ b/source/styles/css/filter.css
@@ -25,6 +25,10 @@
 }
 .filter__wrapper {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
+  grid-template-rows: min-content 1fr min-content;
+  grid-template-areas: "form sort sort" "form card card" "form pagin pagin";
 }
 .filter__title {
   font-size: 18px;
@@ -151,16 +155,6 @@
   border: none;
   cursor: pointer;
 }
-.filter__sort-button {
-  font-family: Roboto;
-  color: rgb(0, 0, 0);
-  font-size: 14px;
-  line-height: 18px;
-  text-align: left;
-  text-transform: uppercase;
-  border: none;
-  background: none;
-}
 
 .filter-header {
   background-color: #EEEEEE;
@@ -172,6 +166,85 @@
   line-height: 55px;
   text-align: center;
   padding: 87px 0 108px 0;
+}
+
+.filter-form {
+  grid-area: form;
+  margin-right: 124px;
+  width: 260px;
+  background-color: #faf4b6;
+}
+
+.filter-sort__wrapper {
+  grid-area: sort;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #c2f4be;
+}
+.filter-sort__types {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 2px solid rgb(102, 40, 236);
+}
+.filter-sort__title {
+  margin: 0;
+}
+.filter-sort__list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.filter-sort__button {
+  font-family: Roboto;
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+  line-height: 18px;
+  text-align: left;
+  text-transform: uppercase;
+  border: none;
+  background: none;
+}
+
+.filter-icons__list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+}
+
+.filter-cards {
+  grid-area: card;
+  margin-bottom: 55px;
+}
+.filter-cards__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: -32px;
+}
+.filter-cards__item {
+  width: 358px;
+  height: 618px;
+  margin-right: 40px;
+  margin-bottom: 32px;
+  padding-top: 40px;
+  border: 2px solid red;
+}
+.filter-cards__item:nth-child(2n) {
+  margin-right: 0;
 }
 
 .filter-pagination {
